--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 /**헤더**/
-.header{
+.header {
   width: 100%;
   height: 8%;
   display: flex;
@@ -10,29 +10,29 @@
   background-color: #ffffff;
 }
 /**금동 매니저님께22**/
-.logo{
-    width: 24.5%;
-    height: 32.5px;
-    background-image: url(/commend/99pro_logo.svg);
-    background-repeat: no-repeat;
-    margin-left: 5.5%;
-}
-.logo_2{
+.logo {
   width: 24.5%;
   height: 32.5px;
-  background-image: url(/commend/99pro_logo_w.svg);
+  background-image: url(/static/commend/99pro_logo.svg);
+  background-repeat: no-repeat;
+  margin-left: 5.5%;
+}
+.logo_2 {
+  width: 24.5%;
+  height: 32.5px;
+  background-image: url(/static/commend/99pro_logo_w.svg);
   background-repeat: no-repeat;
   margin-left: 5.5%;
   display: none;
 }
-.user_link{
+.user_link {
   width: 50%;
   height: 50px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-.user_link_text{
+.user_link_text {
   width: 40%;
   height: 40px;
   border: none;
@@ -41,21 +41,21 @@
   padding-left: 15px;
   background-color: #f0f0f0;
 }
-.user_link_text:hover{
+.user_link_text:hover {
   color: transparent;
   background-color: #b3dbff;
   transition: 0.35s;
 }
-.user_link_text:focus{
+.user_link_text:focus {
   outline: none;
   color: #ffffff;
   background-color: #3ea6ff;
   transition: 0.85s;
 }
-.user_link_text:focus::placeholder{
+.user_link_text:focus::placeholder {
   color: transparent;
 }
-.user_link_button{
+.user_link_button {
   width: 100px;
   height: 40px;
   background-color: #f0f0f0;
@@ -65,17 +65,17 @@
   color: #5a5a5a;
   font-size: 0.8rem;
 }
-.user_link_button:hover{
+.user_link_button:hover {
   color: #ffffff;
   background-color: #3ea6ff;
   transition: 0.3s;
 }
-.user_link_button:focus{
+.user_link_button:focus {
   color: #ffffff;
   background-color: #3ea6ff;
   transition: 0.3s;
 }
-.twinkle{
+.twinkle {
   width: 40px;
   height: 40px;
   margin: 0 20px;
@@ -86,12 +86,13 @@
   justify-content: center;
   color: #5a5a5a;
 }
-.twinkle:hover{
+.twinkle:hover {
   background-color: #5a5a5a;
   transition: 0.35s;
   color: #ffffff;
 }
-.logout_button, .withdrawal{
+.logout_button,
+.withdrawal {
   width: 100px;
   height: 40px;
   background-color: #f0f0f0;
@@ -100,23 +101,26 @@
   color: #5a5a5a;
   font-size: 0.8rem;
 }
-.logout_button{
-  margin: 0 5% 0 10px ;
+.logout_button {
+  margin: 0 5% 0 10px;
 }
-.logout_button:focus, .withdrawal:focus{
+.logout_button:focus,
+.withdrawal:focus {
   color: #ffffff;
   background-color: #979797;
   transition: 0.3s;
 }
-.logout_button:hover, .withdrawal:hover{
+.logout_button:hover,
+.withdrawal:hover {
   color: #ffffff;
   background-color: #979797;
   transition: 0.3s;
 }
-.withdrawal:focus, .withdrawal:hover{
+.withdrawal:focus,
+.withdrawal:hover {
   background-color: #fa4e4e;
 }
-.section{
+.section {
   width: 55%;
   height: 92%;
   display: flex;
@@ -126,7 +130,7 @@
   float: left;
 }
 /**좌측 비디오 섹션**/
-.left_box{
+.left_box {
   width: 100%;
   height: 80%;
   display: flex;
@@ -140,7 +144,7 @@
   -webkit-animation: fadein 2.25s;
   -o-animation: fadein 2.25s;
 }
-.left_two{
+.left_two {
   width: 100%;
   height: 20%;
   display: flex;
@@ -153,14 +157,14 @@
   -webkit-animation: fadein 2.25s;
   -o-animation: fadein 2.25s;
 }
-.video_play{
+.video_play {
   width: 80%;
   height: 65%;
   margin-top: 20px;
   background-color: #efefef;
   box-shadow: 0px 13px 20px #f0f0f0;
 }
-.video_information{
+.video_information {
   width: 80%;
   height: auto;
   margin-top: 25px;
@@ -168,7 +172,9 @@
   justify-content: center;
   align-items: center;
 }
-.info_1, .info_2, .info_3{
+.info_1,
+.info_2,
+.info_3 {
   width: 16%;
   height: 100%;
   display: flex;
@@ -176,47 +182,48 @@
   justify-content: center;
   flex-direction: row;
 }
-.info_1{
+.info_1 {
   width: 54%;
   flex-direction: column;
   align-items: flex-start;
 }
-.info_2{
+.info_2 {
   width: 25%;
   margin: 0 20px;
 }
-.rank_text{
+.rank_text {
   font-size: 0.95rem;
   color: #3ea6ff;
   font-weight: 400;
 }
-.name_text{
+.name_text {
   font-size: 1.7rem;
   font-weight: 500;
   margin: 0.5rem 0 0.8rem 0;
 }
-.views_text{
+.views_text {
   font-size: 0.85rem;
   color: #aaaaaa;
 }
-.youtuber_pic{
+.youtuber_pic {
   width: 48px;
   height: 48px;
   border-radius: 100%;
   margin-right: 10px;
   background-color: green;
 }
-.youtuber_name_text{
+.youtuber_name_text {
   font-size: 1.2rem;
   padding-top: 0.2rem;
   letter-spacing: 1px;
 }
-.subscriber_number{
+.subscriber_number {
   font-size: 0.8rem;
   margin-top: 5px;
   color: #aaaaaa;
 }
-.like, .dislike{
+.like,
+.dislike {
   width: 80px;
   height: 70px;
   display: flex;
@@ -227,52 +234,52 @@
   font-size: 1.8rem;
   color: #cccccc;
 }
-.info_like_number{
+.info_like_number {
   margin-top: 8px;
   font-size: 0.5rem;
 }
-.fa-thumbs-down{
+.fa-thumbs-down {
   transform: scaleX(-1);
 }
-.info_like_number{
+.info_like_number {
   transform: none;
 }
-.like:hover{
+.like:hover {
   transition: 0.35s;
   color: #b3dbff;
 }
-.dislike:hover{
+.dislike:hover {
   transition: 0.35s;
   color: #eea8a8;
 }
-.video_input_chat{
+.video_input_chat {
   width: 80%;
   height: 12%;
 }
-.user_input_chat{
+.user_input_chat {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
-.user_pic{
+.user_pic {
   width: 38px;
   height: 38px;
   margin-right: 10px;
   border-radius: 100%;
   background-color: rosybrown;
 }
-.user_comment{
+.user_comment {
   width: 94%;
   height: 35px;
   border: none;
   border-bottom: 1px solid #cccccc;
 }
-.user_comment:focus{
+.user_comment:focus {
   outline: none;
   border-bottom: 1.5px solid #3ea6ff;
 }
-.user_comment:hover{
+.user_comment:hover {
   border-bottom: 1.5px solid #3ea6ff;
   transition: 0.6s;
 }
@@ -289,12 +296,12 @@
   margin: 15px 25px 0 0;
   border-radius: 15px;
 }
-.next_video:hover{
+.next_video:hover {
   color: #ffffff;
   background-color: #3ea6ff;
   transition: 0.35s;
 }
-.user_comment_send{
+.user_comment_send {
   width: 90px;
   height: 40px;
   background-color: #f0f0f0;
@@ -303,15 +310,15 @@
   float: right;
   border-radius: 15px;
 }
-.user_comment_send:focus{
+.user_comment_send:focus {
   outline: none;
 }
-.user_comment_send:hover{
+.user_comment_send:hover {
   background-color: #3ea6ff;
   color: #ffffff;
   transition: 0.4s;
 }
-.section_2{
+.section_2 {
   width: 45%;
   height: 92%;
   display: flex;
@@ -321,7 +328,7 @@
   float: right;
 }
 /**우측 댓글 섹션**/
-.right_box{
+.right_box {
   width: 100%;
   height: 100%;
   display: flex;
@@ -334,12 +341,12 @@
   -webkit-animation: fadein 2.25s;
   -o-animation: fadein 2.25s;
 }
-.chat_output{
+.chat_output {
   width: 80%;
   height: 55%;
   box-shadow: 0px 8px 20px #f0f0f0;
 }
-.chat_output:hover{
+.chat_output:hover {
   box-shadow: 0px 5px 8px #cccccc;
   transition: 0.5s;
 }
@@ -349,11 +356,13 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column-reverse;
 }
 .comment_list::-webkit-scrollbar {
   display: none;
 }
-.list_1{
+.list_1 {
   width: 100%;
   height: auto;
   margin-top: 0.6rem;
@@ -365,13 +374,13 @@
   padding-bottom: 1rem;
   border-bottom: 1px solid #f0f0f0;
 }
-.list_thumnail{
+.list_thumnail {
   min-width: 80px;
   height: 45px;
   margin: 8px 0;
-  background-color:cadetblue;
+  background-color: cadetblue;
 }
-.list_like{
+.list_like {
   min-width: 45px;
   height: 45px;
   display: flex;
@@ -382,18 +391,18 @@
   color: #cccccc;
   margin: 0 15px;
 }
-.like_number{
+.like_number {
   margin-top: 7px;
   font-size: 0.7rem;
 }
-.list_user_form{
+.list_user_form {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: row;
   margin-bottom: 10px;
 }
-.list_user_name{
+.list_user_name {
   width: auto;
   height: 20px;
   margin-right: 25px;
@@ -401,29 +410,31 @@
   font-weight: 500;
   line-height: 20px;
 }
-.fa-edit, .fa-trash-alt{
+.fa-edit,
+.fa-trash-alt {
   font-size: 0.9rem;
   font-weight: 400;
   color: #cccccc;
 }
-.fa-edit{
+.fa-edit {
   margin-right: 15px;
 }
-.fa-edit:hover, .fa-trash-alt:hover{
+.fa-edit:hover,
+.fa-trash-alt:hover {
   color: #5a5a5a;
   font-weight: bold;
   transition: 0.35s;
 }
-.list_user_text{
+.list_user_text {
   width: 100%;
   height: auto;
   font-size: 0.8rem;
   font-weight: 500;
-  word-break:break-all;
+  word-break: break-all;
   letter-spacing: 0.5px;
   line-height: 1.1rem;
 }
-.chat_rank{
+.chat_rank {
   width: 80%;
   height: 25%;
   margin-top: 20px;
@@ -434,60 +445,67 @@
 .chat_rank::-webkit-scrollbar {
   display: none;
 }
-.chat_rank:hover{
+.chat_rank:hover {
   box-shadow: 0px 5px 8px #cccccc;
   transition: 0.55s;
 }
-.chat_rank_list{
+.chat_rank_list {
   margin: 0 auto;
   width: 94%;
   height: auto;
 }
-.rank_gold, .rank_silver, .rank_bronze{
+.rank_gold,
+.rank_silver,
+.rank_bronze {
   width: 35px;
   height: 35px;
-  background-image: url(/commend/number_1.png);
+  background-image: url(/static/commend/number_1.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
-.rank_silver{
-  background-image: url(/commend/number_2.png);
+.rank_silver {
+  background-image: url(/static/commend/number_2.png);
 }
-.rank_bronze{
-  background-image: url(/commend/number_3.png);
+.rank_bronze {
+  background-image: url(/static/commend/number_3.png);
 }
-#rank_gold, #rank_silver, #rank_bronze{
+#rank_gold,
+#rank_silver,
+#rank_bronze {
   color: #3ea6ff;
 }
 @keyframes fadein {
   from {
-      opacity:0;
+    opacity: 0;
   }
   to {
-      opacity:1;
+    opacity: 1;
   }
 }
-@-moz-keyframes fadein { /* Firefox */
+@-moz-keyframes fadein {
+  /* Firefox */
   from {
-      opacity:0;
+    opacity: 0;
   }
   to {
-      opacity:1;
+    opacity: 1;
   }
 }
-@-webkit-keyframes fadein { /* Safari and Chrome */
+@-webkit-keyframes fadein {
+  /* Safari and Chrome */
   from {
-      opacity:0;
+    opacity: 0;
   }
   to {
-      opacity:1;
+    opacity: 1;
   }
 }
-@-o-keyframes fadein { /* Opera */
+@-o-keyframes fadein {
+  /* Opera */
   from {
-      opacity:0;
+    opacity: 0;
   }
   to {
-      opacity: 1;
+    opacity: 1;
   }
 }
